new version with  pyqt5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-08-13 ertugerata
+         * new version 3.0.3
+         * ported to pyqt5 thanks Harun Gültekin
+
 2011-05-17 mete
          * Update Turkish translation
 
